--- a/html/board.html
+++ b/html/board.html
@@ -3,7 +3,7 @@
     <title>Study Openings!</title>
     <link rel="stylesheet" type="text/css" href="../css/chessboard-0.3.0.css"></link>
     <link rel="stylesheet" type="text/css" href="../css/board.css"></link>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/chessboard-0.3.0.js"></script>
     <script type="text/javascript" src="../js/board.js"></script>
   </head>
