Separates JS into multiple files.

--- a/html/board.html
+++ b/html/board.html
@@ -6,6 +6,13 @@
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/chessboard-0.3.0.js"></script>
     <script type="text/javascript" src="../js/board.js"></script>
+    <script type="text/javascript" src="../js/openings/albin.js"></script>
+    <script type="text/javascript" src="../js/openings/benko.js"></script>
+    <script type="text/javascript" src="../js/openings/dutch.js"></script>
+    <script type="text/javascript" src="../js/openings/french.js"></script>
+    <script type="text/javascript" src="../js/openings/qga.js"></script>
+    <script type="text/javascript" src="../js/config.js"></script>
+    <script type="text/javascript" src="../js/main.js"></script>
   </head>
   <body>
     <div id="opening_name"></div>
